tdf#154473 remove assert

so the commit that caused this:
    commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 27 10:27:46 2021 +0200
    ref-count SdrObject
did its job - we have far fewer crashes due to accessing dead SdrObjects
- but the wide variety of other, smaller leaks, means that sometimes
we have leaks of SdrObjects too.

So just remove this assert for now (but leave the warning in DBG_UTIL
mode in)

Change-Id: I2123ba0f28a0cb4356eab3cbf34c8b67d785c516
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150486
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>